Deployment/InputApi/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: weatherstation
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
