Deployment/InputApi/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: weatherstation
  namespace: weatherstation
spec:
  host: frontend
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    tls:
      mode: DISABLE
