Deployment/InputApi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: weatherstation
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weatherstation-vs
  namespace: weatherstation
spec:
  hosts:
  - "weatherstation.wondering-developer.de"
  gateways:
  - default/ingress-gateway
  http:
  - route:
    - destination:
        host: frontend
        subset: v1
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: weatherstation
  namespace: weatherstation
spec:
  host: frontend
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    tls:
      mode: DISABLE
